<resources>
    <string name="app_name">Device Information</string>

    <string name="loading">Loading&#8230;</string>

    <string name="activity_main">Home</string>
    <string name="build_information">Build Information</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="system_properties">System Properties</string>

    <string name="activity_show_data_helper">Show Data</string>

    <string name="activity_sensor">Sensor</string>
    <string name="sensor_type_unknown">Unknown</string>

    <string name="activity_sensor_details">Sensor Details</string>
    <string name="sensor_id">ID</string>
    <string name="sensor_name">Name</string>
    <string name="sensor_type_id">Type ID</string>
    <string name="sensor_type">Type</string>
    <string name="sensor_vendor">Vendor</string>
    <string name="sensor_version">Version</string>
    <string name="sensor_type_internal">Internal Type</string>
    <string name="sensor_power">Power</string>
    <string name="sensor_power_unit">%1$f mA</string>
    <string name="sensor_min_delay">Minimum Delay</string>
    <string name="sensor_max_delay">Maximum Delay</string>
    <string name="sensor_delay_unit">%1$d ms</string>
    <string name="sensor_resolution">Resolution</string>
    <string name="sensor_resolution_unit">%1$f %2$s</string>
    <string name="sensor_max_range">Maximum Range</string>
    <string name="sensor_reserved_event">Reserved Events</string>
    <string name="sensor_max_event">Maximum Events</string>
    <string name="sensor_event_unit">%1$d/sec</string>
    <string name="sensor_dynamic">Is Dynamic</string>
    <string name="sensor_wake_up">Is Wake Up</string>
    <string name="sensor_additional_info">Additional Information</string>
    <string name="sensor_accuracy">Accuracy</string>
    <string name="sensor_timestamp">Delay</string>
    <string name="sensor_values">Values</string>
    <string name="sensor_value">Value</string>
    <string name="sensor_value_like">Feels like</string>
    <string name="sensor_value_raw">Raw Value</string>
    <string name="sensor_unit_ms2">m/s&#178;</string>
    <string name="sensor_unit_ut">&#181;T</string>
    <string name="sensor_unit_rad">rad/s</string>
    <string name="sensor_unit_deg">&#176;</string>
    <string name="sensor_unit_lx">lux</string>
    <string name="sensor_unit_cm">cm</string>
    <string name="sensor_unit_pascal">hPa</string>
    <string name="sensor_unit_percent">%</string>
    <string name="sensor_value_unit">%1$ .2f %2$s</string>
    <string name="sensor_values_xyz_unit">x=%1$ .2f, y=%2$ .2f, z=%3$ .2f %4$s</string>
    <string name="sensor_value_near">near</string>
    <string name="sensor_value_far">far</string>
    <string name="sensor_values_degree">x=%1$ .0f&#176;, y=%2$ .0f&#176;, z=%3$ .0f&#176;</string>

</resources>
