<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.tamal.deviceinformation.MainActivity">

    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:text="@string/build_information"
                android:id="@+id/build_information"
                android:onClick="showDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/environment_variables"
                android:id="@+id/environment_variables"
                android:onClick="showDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/system_properties"
                android:id="@+id/system_properties"
                android:onClick="showDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
